<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.htwg.co2footprint_tracker.MainActivity">
    <item
        android:id="@+id/menu_request_permissions"
        android:orderInCategory="100"
        android:title="@string/menu_request_permissions"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_start_tracking"
        android:orderInCategory="101"
        android:title="@string/menu_start_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_stop_tracking"
        android:orderInCategory="104"
        android:title="@string/menu_stop_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_purge_db"
        android:orderInCategory="104"
        android:title="@string/menu_purge_db"
        app:showAsAction="never" />
</menu>
