<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.data.DataFragment">

    <data>

        <variable
            name="mainCardModel"
            type="de.htwg.co2footprint_tracker.model.MainCardModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <include
                    android:id="@+id/mode_toggle"
                    layout="@layout/toggle" />
            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/data_usage_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:text="@{mainCardModel.receivedBytes}"
                        android:textColor="#777"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/divider1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/data_usage"
                        android:textColor="#777"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/divider1"
                        app:layout_constraintTop_toBottomOf="@+id/data_usage_value" />

                    <View
                        android:id="@+id/divider1"
                        android:layout_width="1dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:background="#ccc"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/data_usage_value"
                        app:layout_constraintRight_toLeftOf="@+id/co2_equivalent_value"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/co2_equivalent_value"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:text="@{mainCardModel.totalEnergyConsumption}"
                        android:textColor="#777"
                        android:textSize="22sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@+id/divider1"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/co2_equivalent"
                        android:textColor="#777"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toRightOf="@+id/divider1"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/co2_equivalent_value" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/titleConsumers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/greatest_consumers"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="26dp"
                    android:background="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal">

                <include
                    android:id="@+id/first"
                    layout="@layout/consumer_card" />

                <include
                    android:id="@+id/second"
                    layout="@layout/consumer_card" />

                <include
                    android:id="@+id/third"
                    layout="@layout/consumer_card" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="21dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/equates_to"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_marginStart="26dp"
                    android:background="@color/colorAccent" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/co2_equivalent_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp" />

        </LinearLayout>
    </ScrollView>
</layout>